my-website/src/App.css
.App-header {
  height: 50px;
  padding: 10px;
}

.navbar {
  background-color: #92e585;
}

.navbar-brand {
  font-size: 24px;
  font-weight: bold;
}

.navbar-brand, .nav-link {
  padding: 0px;
  color: black;
}

.navbar-brand:hover, .nav-link:hover {
  color: grey;
}

.linkedin, .github, .twitter, .gmail {
  padding-right: 12px;
}

.main-picture {
  background-image: url("../docs/toronto.png");
  background-size: cover;
  width: 100vw;
  height: 100vh;
}

.profile {
  background-color: #f3efe0;
  background-size: cover;
  width: 100vw;
  height: 100vh;
  padding: 50px;
}

.headline {
  text-align: center;
}

hr {
  margin: 40px 0px;
}

img {
  position:relative;
  max-width: 100%;
  max-height: 100%;
  margin-top: 0%;
  margin-left: 0%;
  border: 2px solid black;
  border-radius: 5px;
}

.education {
  background-color: white;
  background-size: cover;
  width: 100vw;
  height: 100vh;
  padding: 50px;
}

.lighthouse-labs {
  color: black;
}

.lighthouse-labs:hover {
  color: black;
  text-decoration: none;
}

.university-of-waterloo {
  color: black;
}

.university-of-waterloo:hover {
  color: black;
  text-decoration: none;
}

@media screen and (max-width: 900px) {
  .App-header a {
    float: none;
    display: block;
    text-align: left;
  }
}

@media screen and (max-width: 767px) {
  .responsive {
    text-align: center;
  }
}

